# mono-parser

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  nx.json  package-lock.json  package.json  tsconfig.json
apps/brain/: Dockerfile  project.json
apps/brain/src/: main.py
apps/gateway/: Dockerfile  jest.config.cts  package.json
apps/gateway-e2e/: jest.config.cts  package.json  tsconfig.json
apps/gateway/prisma/: schema.prisma
apps/gateway/src/: main.ts  prisma.service.ts
brain/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
brain/app/: decision.py  engine.py  features.py  knockout.py  logging_config.py  main.py  models.py  scoring.py
brain/src/brain/: __init__.py
brain/src/brain/app/: main.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/docs/: layout.tsx  page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Header.tsx  Skeleton.tsx  Tooltip.tsx
frontend/lib/api/: applicants.ts  applications.ts  auth.ts  client.ts  gemini.ts  mono.ts  risk-policy.ts  users.ts
frontend/lib/hooks/: use-mono-connect.ts  use-protected-route.ts  use-websocket.ts  useApplicationActions.ts  useApplicationFlow.ts  useApplicationWebSocket.ts
gateway/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
gateway/prisma/: schema.prisma
gateway/src/: app.module.ts  main.ts
(+159 files in other folders)
